# HPC-courses

./: .clang-format  .gitattributes  .gitignore  README.md
ACA/handwriting_recognition_tensorflow/: handwriting_cnn.ipynb
AMSC/: E1_1_pow.cpp  horner.hpp
AMSC/LAB02/: E2_1_polymorphism.cpp
AMSC/LAB03/: E3_1_STL.cpp
AMSC/LAB04/: IOsynch.cpp
AMSC/MISCELLANEOUS/: const&pointers.cpp
APPSTAT/Lab1/: LAB_1.R  aneurysm.txt  faces.r  record.txt
APPSTAT/Lab10/: LAB_10.R  TV.txt  concrete.txt
APPSTAT/Lab2/: LAB_2.R
APPSTAT/Lab3/: Example_PCA_record.R  LAB_3.R  NO.txt  tourists.txt
APPSTAT/Lab4/: LAB_4.R  data_sim.txt
APPSTAT/Lab5/: Additional_Exercises.R  LAB_5.R  diabetes.txt  extra.txt  hatingalmonds.txt  uranium.txt
APPSTAT/Lab6/: Additional_Exercises_ANOVA.R  (+6 more)
AntoniettiExam/: exam  exam.cpp
Lis/: test-installation
Materials/: Intro2Eigen-Lis.md  IterativeSolversLis.md  Lab3_IterSolPrecond.md  Lab4_SolutionsDD-AMGwithLIS.md  Lab6_EigenSolvers.md  bash_essentials.md  installation_guide.md
NAML/: tmp.ipynb
NM4PDE/: README.md
NM4PDE/exam/: CMakeLists.txt
NM4PDE/exam/src/: Heat.hpp  Poisson2D.cpp  Poisson2D.hpp  diffusion-reaction-exam.cpp  poisson_exam.cpp
NM4PDE/exam0602/: CMakeLists.txt
NM4PDE/exam0602/plot/: plot-convergence.py
NM4PDE/exam0602/src/: Poisson2D.cpp  Poisson2D.hpp  Stokes.cpp  Stokes.hpp  stokes_exam.cpp
NM4PDE/exam2301/: CMakeLists.txt
NM4PDE/exam2301/mesh/: mesh-square-h0.012500.msh  mesh-square-h0.025000.msh  mesh-square-h0.050000.msh  mesh-square-h0.100000.msh
NM4PDE/exam2301/src/: Heat.cpp  heat-equation-exam.cpp
NM4PDE/exam_sim/: CMakeLists.txt
NM4PDE/exam_sim/src/: ADR.cpp  ADR.hpp  ADR_exam_sim.cpp  Poisson2D.cpp  Poisson2D.hpp  Stokes.cpp  Stokes.hpp  poisson_exam_sim.cpp
NM4PDE/lab-06/: CMakeLists.txt
NM4PDE/lab-06/mesh/: mesh-beam-10.msh  mesh-beam-5.msh  mesh-cube-5.msh
NM4PDE/lab-06/scripts/: mesh-cube.geo
NM4PDE/lab-06/src/: LinearElasticity.cpp  LinearElasticity.hpp  NonLinearDiffusion.cpp  NonLinearDiffusion.hpp  lab-06-exercise1.cpp  lab-06-exercise2.cpp
NM4PDE/lab-08/: CMakeLists.txt
NM4PDE/lab-08/mesh/: mesh-cube-10.msh  mesh-cube-20.msh  mesh-cube-5.msh
NM4PDE/lab-08/scripts/: mesh-cube.geo  plot-convergence.py
NM4PDE/lab-08/src/: Heat.cpp  Heat.hpp  HeatNonLinear.cpp  HeatNonLinear.hpp  lab-08-exercise1.cpp  lab-08-exercise2.cpp
PC/: 2Dconvolution.cu
(+497 files in other folders)
